--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,13 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
     defaultConfig {
         applicationId "kr.co.sugarhill.rxwithviewmodel"
         minSdkVersion 17
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,6 +21,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+androidExtensions {
+    // for LayoutContainer in RecyclerView.ViewHolder
+    experimental = true
 }
 
 ext {
@@ -35,13 +39,15 @@ ext {
     rxjava = "2.1.10"
     rxandroid = "2.0.2"
     arch_version = "1.1.1"
+
+    koin_version = '0.9.3'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "com.android.support:appcompat-v7:$support_library_version"
+    implementation "com.android.support:design:$support_library_version"
 
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
@@ -58,4 +64,6 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:$rxjava"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid"
+
+    implementation "org.koin:koin-android-architecture:$koin_version"
 }
